--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "dynamsoft-javascript-barcode": "^9.6.20",
+    "html-video-capture": "^0.1.0",
+    "html5-qrcode": "^2.3.8",
+    "quagga": "^0.12.1",
     "react": "^18.2.0",
     "react-barcode-qrcode-scanner": "^0.1.1",
     "react-dom": "^18.2.0",
